# solplot

./: .gas-snapshot  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml  input.csv  input.txt
src/: Plot.sol  lib.rs  main.rs
test/: Plot.t.sol
