[package]
name = "solplot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
plotly = { version = "0.8.4", features = ["kaleido"] }
txt_writer = "0.1.4"
quick-csv = "0.1.6"